reflect-demo/tests/errors/invalid_reflect_on_nested_struct.stderr
error[E0277]: the trait bound `TestStructNested: Reflect` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:3:9
  |
3 |     _f: TestStructNested,
  |         ^^^^^^^^^^^^^^^^ the trait `Reflect` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `Reflect`:
            bool
            char
            i8
            i16
            i32
            i64
            u8
            u16
          and $N others
  = note: required for `TestStructNested` to implement `Input`

error[E0277]: the trait bound `TestStructNested: Reflect` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:3:9
  |
3 |     _f: TestStructNested,
  |         ^^^^^^^^^^^^^^^^ the trait `Reflect` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `Reflect`:
            bool
            char
            i8
            i16
            i32
            i64
            u8
            u16
          and $N others
  = note: required for `TestStructNested` to implement `reflect::Output`
